--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "firebase-admin": "^8.6.0"
+    "firebase-admin": "^8.6.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
